hphp/test/zend/bad/ext/opcache/tests/bug66474.php
<?php
function foo() {
	$speed = 'slow' || 'fast';
}
foo();
echo "ok\n";